translate the index page

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,3 @@
-link:
-text href
-
 image:
 lang icon
 not found image
@@ -8,4 +5,7 @@ not found image
 text:
 lang file
 
-@@
+
+勘误
+加入我们 github
+网站备案号
