--- a/site/todo.txt
+++ b/site/todo.txt
@@ -87,6 +87,11 @@ A6：
 一种方法是安装路径在系统变量环境中；另一种是在启动前指定安装路径，代码片段如下：
 chromeCapabilities.setCapability("chrome.binary", "/path/to/where/chrome/is/installed/chrome.exe");
 
+Q7:win7/Vista下的IE8/9无法正常运行
+A6：
+在win7/Vista下的IE有保护模式选项，需要统一关闭或打开开选项。具体详见IEdriver下载页说明，具体操作为：打开ie选项-》选择‘安全’tab-》分别选择4个安全设置区域
+-》关闭/打开‘启动保护模式’【只要统一设置为相同值即可，如果都打开时还是有问题那就设为全关闭状态】
+
 如何搭建selenium + testNG + maven + eclipse
 hudson ant maven 
 
